# kelioli_pilot

./: .gitignore  README.md  curltester.md  parameters.csv  postman.json  pyproject.toml  pytest.ini  readproject.sh  requirements.txt  resetdb.py  test.csv
scripts/: add_superadmin.py  clear_all_calls_data.py  clear_table.sh  export_org_data.py  import_org_data.py  resetdb.py  view_table.sh
scripts/exports/: test_org1.json
src/app/: main.py
src/app/controllers/: admin_controller.py  agents_controller.py  auth_controller.py  billing_controller.py  calls_controller.py  compliance_controller.py
src/app/core/: constants.py  database.py  logging_config.py  middleware.py  roles.py
src/app/models/: base.py  billing.py  (+8 more)
tests/: conftest.py  test_api_sync_fixes.py  test_logging.py  test_org_data_export_import.py
tests/admin/: test_admin_fields.py  test_admin_logic.py  test_admin_models.py  test_admin_security_rbac.py  test_admin_summary_regression.py
tests/auth/: test_auth_fields.py  test_auth_logic.py  test_auth_models.py  test_change_password.py
tests/billing/: test_billing_auto_populate.py  test_billing_snapshot_worker.py  test_billing_snapshots.py  test_billing_usage.py
tests/calls/: test_calls_csv_batch.py  test_calls_export.py  test_calls_pipeline.py  test_pipeline_gaps_and_queue.py  test_stt_chunking.py  test_usage_limits.py
tests/compliance/: test_compliance_fields.py  test_compliance_format_rule.py  test_compliance_logic.py  test_compliance_models.py
tests/department/: test_department_fields.py  test_department_logic.py  test_department_models.py
(+9 files in other folders)
