[project]
name = "kelioli-pilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bcrypt>=4.0.0",
    "fastapi[standard]>=0.139.2",
    "mutagen>=1.47.0",
    "pyjwt>=2.10.0",
    "python-dotenv>=1.0.1",
    "sarvamai>=0.1.28",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-env>=1.6.0",
]

[tool.pyright]
extraPaths = ["."]

